# mobilitypy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  uploadpypi
.github/workflows/: PyPi-publish.yml
docs/: FAQs.md  REFERENCES.md  RELEASE.md  USAGE.md
mobilitypy/: __init__.py  _version.py  mobility.py
mobilitypy/src/: _Fermi_Dirac_integration.py  __init__.py  _alloy_params.py  _constants.py  _database_related.py  _mobilities_2d_carrier.py  _mobilities_2deg.py  _mobilities_3d_carrier.py  _mobility_carrier_general.py  database.py
mobilitypy/utilities/: _general_plot_functions.py  _plot_fns.py  _quasi3d_plot_fns.py
tutorials/: 01_2deg_mobility_calculation.ipynb  01_mobility_2deg.ipynb  01_mobility_calculation.ipynb  02_2deg_mobility_vs_2deg.ipynb  02_mobility_2deg_3d.ipynb  03_2deg_mobility_vs_temperature.ipynb  03_mobility_vs_2deg.ipynb  04_AlGaN_HEMT_2deg_mobility.ipynb  05_2deg_mobility_q3d.ipynb  06_2deg_mobility_q3d_plot_vs_Temerature.ipynb  mobility_2deg.ipynb  mobility_2deg_3d.ipynb
