[build-system]
requires = ["setuptools"] #, "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mobilitypy"
version = "1.0.4"
#dynamic = ["version"]
dependencies = [
    'numpy', 
    'scipy', 
    'matplotlib' ,
    'pandas'
]
requires-python = ">=3.12"
authors = [
    { name = "Badal Mondal", email = "badalmondal.chembgc@gmail.com" },
]
maintainers = [
  {name = "Badal Mondal", email = "badalmondal.chembgc@gmail.com" },
]
description = "mobilitypy: Python package for mobility calculations in semiconductors"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
keywords = ["mobility", "Electron gas", "2DEG", "3DEG", "Alloy disorder"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SemiconductorTransport/mobilitypy"
Documentation = "https://github.com/SemiconductorTransport/mobilitypy/wiki"
Repository = "https://github.com/SemiconductorTransport/mobilitypy.git"
Issues = "https://github.com/SemiconductorTransport/mobilitypy/issues"
Changelog = "https://github.com/SemiconductorTransport/mobilitypy/wiki/Brief-release-history"
Releasenotes = "https://github.com/SemiconductorTransport/mobilitypy/releases"


[tool.setuptools.packages.find]
where = ["."]
include = ["mobilitypy*"]
exclude = ["imgs", 'docs', "tutorials"]
namespaces = false

#[tool.setuptools]
#include-package-data = true

#[tool.setuptools.package-data]
#mobilitypy = ["data/*.csv", "assets/*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.1"]
